--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -53,9 +53,15 @@ img {
 @media (max-width: 761px) {
   img {
     max-width: 760px; }
+  .product-item {
+    margin-bottom: 0; }
   .product-price {
+    margin-top: 0;
+    position: unset;
     text-align: center; }
   .footer {
-    margin-top: 100px; }
+    margin-top: 150px; }
+  .Social-link {
+    margin: 0 12px; }
   .footer_colu {
     text-align: center; } }
