--- a/src/resoure/scss/app.scss
+++ b/src/resoure/scss/app.scss
@@ -65,7 +65,8 @@ img{
         max-width: 760px
     }
     .product-item{
-        margin-bottom: 0
+        margin-bottom: 0;
+        margin-top: 100px;
     }
     .product-price{
        margin-top: 0;
