--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -54,7 +54,8 @@ img {
   img {
     max-width: 760px; }
   .product-item {
-    margin-bottom: 0; }
+    margin-bottom: 0;
+    margin-top: 100px; }
   .product-price {
     margin-top: 0;
     position: unset;
