--- a/src/resoure/views/home.hbs
+++ b/src/resoure/views/home.hbs
@@ -5,7 +5,7 @@
     <div class="col-sm-12 col-md-12 col-lg-12 mt-4">
       {{#each products}}
 
-    <div class="product-item mt-4">
+    <div class="product-item">
         <div class="img-product">
                 <a href="/products/{{this.slug}}" class="product-link "><img src="{{this.img}}" alt=""></a>
         </div>
