--- a/src/resoure/views/partials/foot.hbs
+++ b/src/resoure/views/partials/foot.hbs
@@ -24,9 +24,11 @@
         <div class=" col-lg-4 col-md-12 col-sm-12 footer_colu">
             <h2>Danh mục sản phẩm</h2>
             <ul class="catelory">
-                {{#each products}}
-                    <li class="cateloty-item">{{this.name}}</li>
-                {{/each}}
+               <li>Bánh Sinh Nhật</li>
+               <li>Bánh Mỳ Tươi</li>
+               <li>Phụ kiện làm bánh </li>
+               <li>Hướng dẫn làm bánh</li>
+               <li>Khóa học làm bánh </li>
             </ul>
         </div>
         
