--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -50,6 +50,25 @@ img {
   display: flex;
   justify-content: space-between; }
 
+.list-products {
+  margin-left: 0;
+  margin-top: 12px;
+  padding-left: 0; }
+
+.products-item {
+  margin-top: 8px;
+  margin-bottom: 8px;
+  background-color: antiquewhite; }
+
+.search-products-name, .link {
+  position: relative; }
+
+.name-sp, .see-more {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%); }
+
 @media (max-width: 761px) {
   img {
     max-width: 760px; }
