--- a/src/resoure/views/products/show.hbs
+++ b/src/resoure/views/products/show.hbs
@@ -15,7 +15,9 @@
              <div class="product-price">
                 <h3 class="product-name">{{products.name}}</h3>
                 <h3>Giá bán: {{products.price}} VND</h3>
-                <button type="button" class="btn btn-primary mua-btn" >Mua ngay</button>
+                <a href="/cart/add-to-cart/{{products._id}}" class="btn btn-raised btn-success pull-right">
+                                <i class="fa fa-plus" aria-hidden="true"></i> Add to shopping cart
+                </a>
              </div>
         </div>
     </div>
